// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package TransparentUpgradeableProxy;

import "google/protobuf/timestamp.proto";
option go_package = "github.com/trylotus/connectors/TransparentUpgradeableProxy";


message AdminChanged {
	google.protobuf.Timestamp ts = 1;
	bytes previousAdmin = 2; 
	bytes newAdmin = 3; 
}

message Upgraded {
	google.protobuf.Timestamp ts = 1;
	bytes implementation = 2; 
}
