
package PAXUSD

import (
	"github.com/nakji-network/connector/common"

	"github.com/ethereum/go-ethereum/accounts/abi"
	"github.com/ethereum/go-ethereum/core/types"
	"github.com/rs/zerolog/log"
	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
	"google.golang.org/protobuf/types/known/timestamppb"
)

type SmartContract struct{}

func (sc *SmartContract) Message(eventName string, contractAbi *abi.ABI, vLog types.Log, timestamp *timestamppb.Timestamp) protoreflect.ProtoMessage {
	switch eventName {
	case "AdminChanged":
		e := new(PAXUSDAdminChanged)
		if err := common.UnpackLog(*contractAbi, e, eventName, vLog); err != nil {
			log.Error().Err(err).Msg("Failed to unpack log")
			return nil
		}

		return &AdminChanged{
				Ts:   timestamp,
				PreviousAdmin:  e.PreviousAdmin.Bytes(),
				NewAdmin:  e.NewAdmin.Bytes(),
		}
	case "Upgraded":
		e := new(PAXUSDUpgraded)
		if err := common.UnpackLog(*contractAbi, e, eventName, vLog); err != nil {
			log.Error().Err(err).Msg("Failed to unpack log")
			return nil
		}

		return &Upgraded{
				Ts:   timestamp,
				Implementation:  e.Implementation.Bytes(),
		}
	}
	return nil
}
